<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_draw_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/basic_draw_line"
            style="@style/button_style_white_bg"
            android:text="@string/basic_draw_line" />

        <Button
            android:id="@+id/basic_draw_path"
            style="@style/button_style_white_bg"
            android:text="@string/basic_draw_path" />

        <Button
            android:id="@+id/basic_draw_circle"
            style="@style/button_style_white_bg"
            android:text="@string/basic_draw_circle" />

        <Button
            android:id="@+id/basic_draw_oval"
            style="@style/button_style_white_bg"
            android:text="@string/basic_draw_oval" />

        <Button
            android:id="@+id/basic_draw_rect"
            style="@style/button_style_white_bg"
            android:text="@string/basic_draw_rect" />

         <Button
            android:id="@+id/basic_draw_rount_rect"
            style="@style/button_style_white_bg"
            android:text="@string/basic_draw_round_rect" />

        <Button
            android:id="@+id/basic_draw_triangle"
            style="@style/button_style_white_bg"
            android:text="@string/basic_draw_triangle" />

        <Button
            android:id="@+id/basic_draw_text"
            style="@style/button_style_white_bg"
            android:text="@string/basic_draw_text" />

        <Button
            android:id="@+id/basic_draw_picture"
            style="@style/button_style_white_bg"
            android:text="@string/basic_draw_picture" />

        <Button
            android:id="@+id/basic_draw_bitmap"
            style="@style/button_style_white_bg"
            android:text="@string/basic_draw_bitmap" />

        <Button
            android:id="@+id/basic_draw_gradient"
            style="@style/button_style_white_bg"
            android:text="@string/basic_draw_gradient" />
    </LinearLayout>
</ScrollView>
